add link to othello

--- a/gomoku/index.html
+++ b/gomoku/index.html
@@ -19,10 +19,8 @@
         <ul class="sidebarMenuInner">
             <li id="big">ゲーム一覧 </li>
             <li><a href="../" target="_blank">ホーム</a></li>
-            <li><a href="../gomoku/index.html" target="_blank">五目並べ</a></li>
-            <li><a href="https://twitter.com/plavookac" target="_blank">Twitter</a></li>
-            <li><a href="https://www.youtube.com/channel/UCDfZM0IK6RBgud8HYGFXAJg" target="_blank">YouTube</a></li>
-            <li><a href="https://www.linkedin.com/in/plavookac/" target="_blank">Linkedin</a></li>
+            <li><a href="../gomoku/" target="_blank">五目並べ</a></li>
+            <li><a href="../othello/" target="_blank">オセロ</a></li>
         </ul>
     </div>
     <div id='center' class="main center">
