--- a/index.html
+++ b/index.html
@@ -20,10 +20,7 @@
         <ul class="sidebarMenuInner">
             <li>作成したゲーム一覧 <span>ほぼAI製</span></li>
             <li><a href="./gomoku/index.html" target="_blank">五目並べ</a></li>
-            <li><a href="https://instagram.com/plavookac" target="_blank">Instagram</a></li>
-            <li><a href="https://twitter.com/plavookac" target="_blank">Twitter</a></li>
-            <li><a href="https://www.youtube.com/channel/UCDfZM0IK6RBgud8HYGFXAJg" target="_blank">YouTube</a></li>
-            <li><a href="https://www.linkedin.com/in/plavookac/" target="_blank">Linkedin</a></li>
+            <li><a href="./othello/" target="_blank">オセロ</a></li>
         </ul>
     </div>
     <div id='center' class="main center">
