--- a/othello/index.html
+++ b/othello/index.html
@@ -19,7 +19,8 @@
         <ul class="sidebarMenuInner">
             <li>ゲーム一覧 </li>
             <li><a href="../" target="_blank">ホーム</a></li>
-            <li><a href="../gomoku/index.html" target="_blank">五目並べ</a></li>
+            <li><a href="../gomoku/" target="_blank">五目並べ</a></li>
+            <li><a href="../othello/" target="_blank">オセロ</a></li>
         </ul>
     </div>
     <div id='center' class="main center">
