--- a/p2ptest/index.html
+++ b/p2ptest/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <title>WebRTC Demo</title>
     <script src="./script.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 </head>
 
 <body>
@@ -25,7 +26,7 @@
     <p>(手順5) ブラウザ1で，コピーしたブラウザ2のSDP (answer) を貼り付け Set を押す。</p>
     <textarea id="remoteSDP" cols="80" rows="5"></textarea>
     <button type="button" onclick="setRemoteSdp();">Set</button>
-
+    <div id="QR" ></div>
     <h2>データチャネルでの通信</h2>
     <form action="javascript:sendMessage()">
         <input type="text" id="message" size="30" value="" />
