--- a/p2ptest/index.html
+++ b/p2ptest/index.html
@@ -3,31 +3,20 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>WebRTC Demo</title>
+    <title>WebRTC Chat</title>
     <script src="./script.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 </head>
 
 <body>
-    <h1>WebRTC Data Channel Demo</h1>
-
-    <h2>シグナリング</h2>
+    <h1>WebRTC based chat</h1>
     <p>状態: <input type="text" id="status" value="" readonly="readonly" /></p>
-
-    <h3>SDPの生成</h3>
-    <p>(手順1) ブラウザ1で Start を押し，SDP (offer) を生成する。</p>
-    <button type="button" onclick="startPeerConnection()">Start</button>
-    <h3>自端末のSDP (Read-only)</h3>
-    <p>(手順2) ブラウザ1からこのSDP (offer) をコピーする。</p>
-    <p>(手順4) ブラウザ2で生成したこのSDP (answer) をコピーする。</p>
-    <textarea id="localSDP" cols="80" rows="5" readonly="readonly"></textarea>
-    <h3>他端末のSDP (手動でセットする)</h3>
-    <p>(手順3) ブラウザ2で，コピーしたブラウザ1のSDP (offer) を貼り付け Set を押すと，自端末のSDPに返答用 SDP (answer) が生成される。</p>
-    <p>(手順5) ブラウザ1で，コピーしたブラウザ2のSDP (answer) を貼り付け Set を押す。</p>
-    <textarea id="remoteSDP" cols="80" rows="5"></textarea>
-    <button type="button" onclick="setRemoteSdp();">Set</button>
+    <button type="button" onclick="startPeerConnection()">スタート</button>
+    <!--<textarea id="localSDP" cols="80" rows="5" readonly="readonly"></textarea>-->
+    <!--<textarea id="remoteSDP" cols="80" rows="5"></textarea>-->
+    <button type="button" onclick="setRemoteSdp();">接続</button>
     <div id="QR" ></div>
-    <h2>データチャネルでの通信</h2>
+    <br><br><br>
     <form action="javascript:sendMessage()">
         <input type="text" id="message" size="30" value="" />
         <input type="submit" value="Send" />
