--- a/p2ptest/index.html
+++ b/p2ptest/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <title>WebRTC Chat</title>
     <script src="./script.js" defer></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrious/4.0.2/qrious.js"></script>
 </head>
 
 <body>
@@ -15,7 +15,7 @@
     <!--<textarea id="localSDP" cols="80" rows="5" readonly="readonly"></textarea>-->
     <!--<textarea id="remoteSDP" cols="80" rows="5"></textarea>-->
     <button type="button" onclick="setRemoteSdp();">接続</button>
-    <div id="QR" ></div>
+    <canvas id="sampleQR"></canvas>
     <br><br><br>
     <form action="javascript:sendMessage()">
         <input type="text" id="message" size="30" value="" />
