--- a/p2ptest/index.html
+++ b/p2ptest/index.html
@@ -15,14 +15,34 @@
     <!--<textarea id="localSDP" cols="80" rows="5" readonly="readonly"></textarea>-->
     <!--<textarea id="remoteSDP" cols="80" rows="5"></textarea>-->
     <button type="button" onclick="setRemoteSdp();">接続</button>
-    <canvas id="sampleQR"></canvas>
+    <canvas id="sampleQR" width="500px" height="500px"></canvas>
     <br><br><br>
     <form action="javascript:sendMessage()">
         <input type="text" id="message" size="30" value="" />
         <input type="submit" value="Send" />
     </form>
     <textarea id="history" cols="80" rows="10" readonly="readonly"></textarea>
+    <style>
+        .gradeup-input {
+            margin: 24px 0 0;
+            display: flex;
+            justify-content: space-between;
+            max-width: 600px;
 
+            input {
+                width: calc(100% - 88px);
+                height: 48px;
+                padding: 0 10px;
+                border: 1px solid #ccc;
+            }
+
+            button {
+                width: 80px;
+                height: 48px;
+                border: 1px solid #ccc;
+            }
+        }
+    </style>
 </body>
 
 </html>
